fix: Fixed search bar position and Overlap of search results

--- a/components/search.module.css
+++ b/components/search.module.css
@@ -17,10 +17,17 @@
   top: 100%;
   left: 0;
   right: 0;
+  z-index: 98;
+  background: white;
+  width: 100%;
 }
 
 .result {
   padding: 18px;
+}
+
+.result a{
+  z-index: 99;
 }
 
 .result:hover {
